Japanese translation in the 1.4.x branch updates.
* subversion/po/ja.po: Merge update of ja.po in the trunk tree at
  r21043:21045.
  Now ja.po has 1478 translated messages against r21045 (Emacs PO-mode
  status: "1479t+256o").

--- a/subversion/po/ja.po
+++ b/subversion/po/ja.po
@@ -9244,7 +9244,7 @@ msgid ""
 "In other words, the destination repository should be a read-only\n"
 "mirror of the source repository.\n"
 msgstr ""
-"使用方法: svnsync initialize <同期先 URL> --source-url <同期元 URL>\n"
+"使用方法: svnsync initialize <同期先 URL> <同期元 URL>\n"
 "<同期先 URL> のリポジトリを、他のリポジトリから同期するために初期化します。\n"
 "\n"
 "<同期先 URL> が指すのは、コミットされたリビジョンをもたないリポジトリのルー"
