--- a/subversion/po/nb.po
+++ b/subversion/po/nb.po
@@ -60,7 +60,7 @@ msgstr ""
 "Project-Id-Version: subversion 1.1.0\n"
 "Report-Msgid-Bugs-To: dev@subversion.tigris.org\n"
 "POT-Creation-Date: 2006-08-04 18:38+0200\n"
-"PO-Revision-Date: 2006-07-19 00:08+0200\n"
+"PO-Revision-Date: 2006-08-13 20:01+0200\n"
 "Last-Translator: Subversion Developers <dev@subversion.tigris.org>\n"
 "Language-Team: Norwegian <dev@subversion.tigris.org>\n"
 "MIME-Version: 1.0\n"
@@ -4525,13 +4525,13 @@ msgid "'%s' is already under version control"
 msgstr "«%s» er allerede under versjonskontroll"
 
 #: libsvn_wc/adm_ops.c:1128
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Can't replace '%s' with a node of a differing type; the deletion must be "
 "committed and the parent updated before adding '%s'"
 msgstr ""
-"Kan ikke erstatte «%s» med en annen nodetype. Send inn slettingen, oppdater "
-"forelderen og legg deretter til «%s»"
+"Kan ikke erstatte «%s» med en annen nodetype; slettingen må sendes inn "
+"og forelderen må oppdateres før «%s» legges til"
 
 #: libsvn_wc/adm_ops.c:1145
 #, c-format
@@ -5159,22 +5159,22 @@ msgid "Error writing log file for '%s'"
 msgstr "Feil under skriving av loggfil for «%s»"
 
 #: libsvn_wc/update_editor.c:1078
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Failed to add directory '%s': a non-directory object of the same name "
 "already exists"
 msgstr ""
-"Klarte ikke å legge til katalogen «%s»: En oppføring med samme navn finnes "
-"allerede"
+"Klarte ikke å legge til katalogen «%s»: Et objekt som ikke er en katalog "
+"finnes allerede med det samme navnet"
 
 #: libsvn_wc/update_editor.c:1108
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Failed to forcibly add directory '%s': a versioned directory of the same "
 "name already exists"
 msgstr ""
-"Klarte ikke å legge til katalogen «%s»: En oppføring med samme navn finnes "
-"allerede"
+"Klarte ikke å legge til katalogen «%s» med makt: En versjonert katalog med samme "
+"navn finnes allerede"
 
 #: libsvn_wc/update_editor.c:1121
 #, c-format
@@ -5222,12 +5222,12 @@ msgstr ""
 "allerede forberedt for tillegging"
 
 #: libsvn_wc/update_editor.c:1534
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Failed to add file '%s': a non-file object of the same name already exists"
 msgstr ""
-"Klarte ikke å legge til filen «%s»: En oppføring med samme navn finnes "
-"allerede"
+"Klarte ikke å legge til filen «%s»: Et objekt som ikke er en fil finnes allerede "
+"med det samme navnet"
 
 #: libsvn_wc/update_editor.c:1545
 #, c-format
@@ -5721,6 +5721,19 @@ msgid ""
 "                                --ignore-eol-style:\n"
 "                                   Ignore changes in EOL style"
 msgstr ""
+"Standardverdi: «-u». Når Subversion kjører et ekstern diff-program,\n"
+"                             kjøres dette programmet med parametrene ARG."
+"                             Men når Subversion bruker den interne diff-\n"
+"                             implementasjonen, eller når Subversion viser\n"
+"                             «blame»-informasjon, kan ARG være følgende:\n"
+"                                -u (--unified):\n"
+"                                   Vis tre linjer med omkringliggende tekst.\n"
+"                                -b (--ignore-space-change):\n"
+"                                   Ignorer forandringer i antall blanktegn.\n"
+"                                -w (--ignore-all-space):\n"
+"                                   Ignorer alle blanktegn.\n"
+"                                --ignore-eol-style:\n"
+"                                   Ignorer forandringer i linjeslutt-stil."
 
 #: svn/main.c:130
 msgid "pass contents of file ARG as additional args"
@@ -5925,6 +5938,26 @@ msgid ""
 "  to the working copy.  All properties from the repository are applied\n"
 "  to the obstructing path.\n"
 msgstr ""
+"Hent ut en arbeidskopi fra et depot.\n"
+"bruk: checkout URL[@REV]... [STI]\n"
+"\n"
+"  Hvis REV er spesifisert, bestemmer dette revisjonen URLen først blir\n"
+"  lett opp.\n"
+"\n"
+"  Nettadressens basenavn blir brukt som målkatalog hvis STI utelates.\n"
+"  Hvis flere nettadresser oppgis, blir hver nettadresse hentet ut i en under-\n"
+"  katalog under STI hvor underkatalogen får samme navn som nettadressens\n"
+"  basenavn.\n"
+"\n"
+"Hvis --force brukes, vil uversjonerte stier som ligger i veien i\n"
+"målkatalogen ikke føre til at uthentingen automatisk vil feile. Hvis stien\n"
+"som ligger i veien er av samme type (fil eller katalog) som den tilsvarende\n"
+"stien i depotet vil den bli versjonert, men innholdet vil ikke bli forandret.\n"
+"Dette betyr at underelementene i en katalog som ligger i veien også kan\n"
+"sperre for elementer og dermed bli versjonert. For filer vil forandringer i\n"
+"innhold mellom depotet og elementet som sperrer bli behandlet som lokale\n"
+"forandringer i arbeidskopien. Alle egenskaper fra depotet blir lagt til\n"
+"stien som sperrer.\n"
 
 #: svn/main.c:288
 msgid ""
@@ -6748,7 +6781,6 @@ msgstr ""
 "    Status mot revisjon:   981\n"
 
 #: svn/main.c:745
-#, fuzzy
 msgid ""
 "Update the working copy to a different URL.\n"
 "usage: 1. switch URL [PATH]\n"
@@ -6787,6 +6819,15 @@ msgstr ""
 "     Dette gjøres når depotets plassering endres (som etter\n"
 "     en plan- eller tjenernavnsendring), men arbeidskopien din\n"
 "     fortsatt gjenspeiler samme katalog i det samme depotet.\n"
+"\n"
+"Hvis --force brukes, vil uversjonerte stier som ligger i veien i arbeidskopien\n"
+"ikke føre til at oppdateringen automatisk vil feile. Hvis stien som ligger i\n"
+"veien er av samme type (fil eller katalog) som den tilsvarende stien i depotet\n"
+"vil den bli versjonert, men innholdet vil ikke bli forandret. Dette betyr at\n"
+"underelementene i en katalog som ligger i veien også kan sperre for elementer\n"
+"og dermed bli versjonert. For filer vil forandringer i innhold mellom depotet\n"
+"og elementet som sperrer bli behandlet som lokale forandringer i arbeidskopien.\n"
+"Alle egenskaper fra depotet blir lagt til stien som sperrer.\n"
 
 #: svn/main.c:772
 msgid ""
@@ -6801,7 +6842,6 @@ msgstr ""
 "  Bruk --force for å bryte låsen.\n"
 
 #: svn/main.c:780
-#, fuzzy
 msgid ""
 "Bring changes from the repository into the working copy.\n"
 "usage: update [PATH...]\n"
@@ -6850,11 +6890,22 @@ msgstr ""
 "    U  Oppdatert\n"
 "    C  I konflikt\n"
 "    G  Flettet\n"
+"    E  Eksisterende objekt\n"
 "\n"
 "  Et tegn i den første kolonnen viser hva som er gjort med selve filen,\n"
 "  mens den andre viser oppdateringer i filens egenskaper.\n"
 "  En «B» i den tredje kolonnen indikerer at låsen for filen er blitt\n"
 "  brutt eller stjålet.\n"
+"\n"
+"Hvis --force brukes, vil uversjonerte stier som ligger i veien i arbeidskopien\n"
+"ikke føre til at oppdateringen automatisk vil feile. Hvis stien som ligger i\n"
+"veien er av samme type (fil eller katalog) som den tilsvarende stien i depotet\n"
+"vil den bli versjonert, men innholdet vil ikke bli forandret. Dette betyr at\n"
+"underelementene i en katalog som ligger i veien også kan sperre for elementer\n"
+"og dermed bli versjonert. For filer vil forandringer i innhold mellom depotet\n"
+"og elementet som sperrer bli behandlet som lokale forandringer i arbeidskopien.\n"
+"Alle egenskaper fra depotet blir lagt til stien som sperrer. Stier som\n"
+"allerede eksisterte merkes med en «E» i den første kolonnen.\n"
 
 #: svn/main.c:856 svnadmin/main.c:78 svnlook/main.c:285 svnsync/main.c:168
 msgid "Caught signal"
@@ -8550,31 +8601,40 @@ msgid ""
 "In other words, the destination repository should be a read-only\n"
 "mirror of the source repository.\n"
 msgstr ""
+"bruk: svnsync initialize MÅLURL KILDEURL\n"
+"\n"
+"Initialiser et måldepot for synkronisering fra et annet depot.\n"
+"\n"
+"Mål-URLen må peke til roten av et depot som ikke inneholder noen innlagte\n"
+"revisjoner. Måldepotet må tillate forandringer i egenskaper.\n"
+"\n"
+"Du skal ikke legge inn revisjoner eller gjøre forandringer i måldepotet på noen\n"
+"annen måte enn via «svnsync». Med andre ord, måldepotet skal være et\n"
+"skrivebeskyttet speil av kildepotet.\n"
 
 #: svnsync/main.c:70
-#, fuzzy
 msgid ""
 "usage: svnsync synchronize DEST_URL\n"
 "\n"
 "Transfer all pending revisions from source to destination.\n"
 msgstr ""
 "bruk: svnsync synchronize MÅLURL\n"
+"\n"
 "Overfør alle utestående revisjoner fra kilde til mål.\n"
 
 #: svnsync/main.c:75
-#, fuzzy
 msgid ""
 "usage: svnsync copy-revprops DEST_URL REV\n"
 "\n"
 "Copy all revision properties for revision REV from source to\n"
 "destination.\n"
 msgstr ""
-"bruk: svnsync copy-revprops MÅLURL --revision REV\n"
+"bruk: svnsync copy-revprops MÅLURL REV\n"
+"\n"
 "Kopier alle revisjonsegenskaper for revisjon REV fra kilde\n"
 "til mål.\n"
 
 #: svnsync/main.c:81
-#, fuzzy
 msgid ""
 "usage: svnsync help [SUBCOMMAND...]\n"
 "\n"
@@ -8602,12 +8662,12 @@ msgstr "Økten har roten på «%s», men depotroten er «%s»"
 #: svnsync/main.c:362
 #, c-format
 msgid "Copied properties for revision %ld (%s* properties skipped).\n"
-msgstr ""
+msgstr "Kopierte egenskaper for revisjon %ld («%s*»-egenskaper droppet).\n"
 
 #: svnsync/main.c:367
-#, fuzzy, c-format
+#, c-format
 msgid "Copied properties for revision %ld.\n"
-msgstr "Ikke-versjonerte egenskaper på revisjon %ld:\n"
+msgstr "Kopierte egenskaper for revisjon %ld.\n"
 
 #: svnsync/main.c:408
 msgid "Cannot initialize a repository with content in it"
@@ -8620,15 +8680,14 @@ msgstr "Måldepotet synkroniserer allerede fra «%s»"
 
 #: svnsync/main.c:475 svnsync/main.c:478 svnsync/main.c:1128
 #: svnsync/main.c:1212
-#, fuzzy, c-format
+#, c-format
 msgid "Path '%s' is not a URL"
-msgstr "Filstien «%s» er ingen fil"
+msgstr "Filstien «%s» er ikke en URL"
 
 #: svnsync/main.c:858
-#, fuzzy, c-format
+#, c-format
 msgid "Committed revision %ld.\n"
 msgstr ""
-"\n"
 "La inn revisjon %ld.\n"
 
 #: svnsync/main.c:895
@@ -8636,9 +8695,9 @@ msgid "Destination repository has not been initialized"
 msgstr "Måldepotet er ikke blitt initialisert"
 
 #: svnsync/main.c:910
-#, fuzzy, c-format
+#, c-format
 msgid "UUID of source repository (%s) does not match expected UUID (%s)"
-msgstr "UUID for måldepotet (%s) samsvarer ikke med forventet UUID (%s)"
+msgstr "UUID for kildedepotet (%s) samsvarer ikke med forventet UUID (%s)"
 
 #: svnsync/main.c:972
 #, c-format
@@ -8647,6 +8706,9 @@ msgid ""
 "destination HEAD (%ld) are inconsistent; have you committed to the "
 "destination without using svnsync?"
 msgstr ""
+"Revisjonen som for øyeblikket blir kopiert (%ld), siste flettede revisjon (%ld) "
+"og HEAD for måldepotet (%ld) samsvarer ikke. Har du foretatt innlegginger i "
+"måldepotet uten å bruke svnsync?"
 
 #: svnsync/main.c:1008
 #, c-format
@@ -8654,6 +8716,8 @@ msgid ""
 "Destination HEAD (%ld) is not the last merged revision (%ld); have you "
 "committed to the destination without using svnsync?"
 msgstr ""
+"HEAD i måldepotet (%ld) er ikke den siste flettede revisjonen (%ld). "
+"Har du foretatt innlegginger i måldepotet uten å bruke svnsync?"
 
 #: svnsync/main.c:1082
 #, c-format
@@ -8667,9 +8731,8 @@ msgstr ""
 "blitt synkronisert enda"
 
 #: svnsync/main.c:1215
-#, fuzzy
 msgid "Invalid revision number"
-msgstr "Det er angitt ugyldig revisjonsnummer"
+msgstr "Ugyldig revisjonsnummer"
 
 #: svnsync/main.c:1251
 msgid ""
@@ -8695,9 +8758,8 @@ msgstr ""
 "Skriv «svnsync help %s» for bruksanvisning.\n"
 
 #: svnsync/main.c:1502
-#, fuzzy
 msgid "Not enough arguments provided; try 'svnsync help' for more info"
-msgstr "Ikke nok argumenter angitt; prøv «svn help» for mer informasjon"
+msgstr "Ikke nok argumenter angitt; prøv «svnsync help» for mer informasjon"
 
 #: svnversion/main.c:39
 #, c-format
